@@ -1,7 +1,13 @@
+2007-11-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-15-06
+	* add ability to convert a fragment (*.cff) in gui's convert
+	dialog
+
 2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-15-05
-	* fix ascii converter: sequences converted before apths (UB)
+	* fix ascii converter: sequences converted before paths (UB)
 
 2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
